<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".fragment.MeetRoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:elevation="2dp"
            android:gravity="center"
            android:text="@string/room_meet"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/roomBackIB"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/button_bottom_navigation_view_background"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:src="?attr/homeAsUpIndicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/roomRV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="10"
            tools:listitem="@layout/message_item_view">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/addFileRoomIB"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/button_bottom_navigation_view_background"
                android:contentDescription="@string/attach"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/add" />

            <ImageButton
                android:id="@+id/microRoomIB"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="#FFFFFF"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/micro_meet"
                app:layout_constraintStart_toEndOf="@+id/addFileRoomIB"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/roomMessageET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/message_box_background"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/input_message"
                android:importantForAutofill="no"
                android:inputType="textLongMessage|textMultiLine"
                android:maxLines="5"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/enterMessageRoomBtn"
                app:layout_constraintStart_toEndOf="@+id/microRoomIB" />

            <ImageButton
                android:id="@+id/enterMessageRoomBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/button_background"
                android:contentDescription="@string/send"
                android:paddingStart="3dp"
                android:paddingEnd="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/paper_planes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
