<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.ConferenceActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/conferenceNameTV"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:elevation="2dp"
            android:ellipsize="marquee"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/conference_name"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/resultsCardIB"
            app:layout_constraintStart_toEndOf="@+id/confBackIB"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/confBackIB"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/button_bottom_navigation_view_background"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <ImageButton
            android:id="@+id/conferenceSettingsIB"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/button_bottom_navigation_view_background"
            android:elevation="2dp"
            android:padding="7dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gear" />

        <ImageView
            android:id="@+id/resultsCardIB"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:elevation="2dp"
            android:padding="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/conferenceSettingsIB"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cards" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/conferenceRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:reverseLayout="false"
        app:stackFromEnd="true"
        tools:itemCount="5"
        tools:listitem="@layout/your_message_item_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/addFileConferenceIB"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/button_bottom_navigation_view_background"
            android:contentDescription="@string/attach"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add" />

        <EditText
            android:id="@+id/conferenceMessageET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/message_box_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/input_message"
            android:importantForAutofill="no"
            android:inputType="textLongMessage|textMultiLine|textCapSentences"
            android:maxLines="5"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/enterMessageIB"
            app:layout_constraintStart_toEndOf="@+id/addFileConferenceIB" />

        <ImageButton
            android:id="@+id/enterMessageIB"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/send"
            android:elevation="1dp"
            android:onClick="onEnterMessageButtonClick"
            android:paddingStart="3dp"
            android:paddingEnd="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/paper_planes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>